# cram

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cli/: CMakeLists.txt  cli.cpp
cram/: CMakeLists.txt  cram.cpp
cram/include/: config.hpp  cram.hpp  options.hpp  result.hpp
